[docs] chore: fix overlapping table and sidebar in docs (#3092)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -231,6 +231,7 @@
     table tr td {
         padding: 0.65rem 0.8125rem;
         border-color: #dfe5f0;
+        word-break: break-word;
     }
     a {
         color: var(--ifm-color-primary);
